setsockopt IP_TOS needs an int as argument on NetBSD, thanks to Sergey for pointing this out.

BUG:139081


svn path=/trunk/extragear/network/ktorrent/; revision=615401